prevented overflow x in gallery

--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@ html {
   display: block;
   max-width: 100%!important;
   max-height: 100%!important;
+  overflow-x: hidden;
 }
 body {
   height: 100%;
@@ -20,6 +21,7 @@ body {
   position: relative;
   top: 0;
   left: 0;
+  overflow-x: hidden;
 }
 
 .bg-img {
